maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:4: error: not enough arguments for method ecrire: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
  ecrire(x,y)
        ^JediEscaper:37: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (i<- 0 to getMondeLargeur() -1) {
        ^